Change LF input file from text (/var/log/messages) to json (/var/lib/docker/containers)

--- a/10-syslog.conf
+++ b/10-syslog.conf
@@ -1,5 +1,10 @@
 filter {
   if [type] == "syslog" {
+    json {
+      source => "message"
+    }
+  }
+  if [type] == "xxxsyslog" {
     grok {
       match => { "message" => "%{SYSLOGTIMESTAMP:syslog_timestamp} %{SYSLOGHOST:syslog_hostname} %{DATA:syslog_program}(?:\[%{POSINT:syslog_pid}\])?: %{GREEDYDATA:syslog_message}" }
       add_field => [ "received_at", "%{@timestamp}" ]
